trying to fix hidden text on dark mode phone for #3

--- a/web-version-app/src/styles/globals.css
+++ b/web-version-app/src/styles/globals.css
@@ -89,6 +89,7 @@ body {
   font-family: Helvetica, Arial, sans-serif;
   font-weight: 400;
   background-color: var(--color-white);
+  color: var(--color-black);
 }
 
 a {
